try to search job by category

--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
     <script>
       AOS.init();
     </script>
+
+      <script type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+      </script>
+      <script type="text/javascript">
+      (function(){
+      emailjs.init("CI0W8Fvmb5rU_EeB5");
+      })();
+      </script>
   </body>
 </html>
